[gd_scene load_steps=19 format=3 uid="uid://c1rq04b6lusko"]

[ext_resource type="Script" path="res://entities/player.gd" id="1_nxfsn"]
[ext_resource type="Texture2D" uid="uid://xg87uinnbq4g" path="res://spritesheets/player-no-helmet-2.png" id="2_7b0wk"]
[ext_resource type="Shader" path="res://entities/remove_bg.gdshader" id="2_7eybn"]
[ext_resource type="Texture2D" uid="uid://bgw085yp3cilu" path="res://spritesheets/player-no-helmet.png" id="4_h48un"]
[ext_resource type="Texture2D" uid="uid://cyno57yssq5f0" path="res://lights/light.png" id="4_kwrbe"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dekcq"]
radius = 8.0
height = 38.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7f6se"]
shader = ExtResource("2_7eybn")
shader_parameter/bg_color = Color(0, 0, 1, 1)

[sub_resource type="Animation" id="Animation_4rh8x"]
resource_name = "idle"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NoCannonSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_24bmv"]
resource_name = "running"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NoCannonSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51, 52, 53, 54, 55, 56, 57]
}

[sub_resource type="Animation" id="Animation_7nqjc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NoCannonSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [48]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CannonSprites:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [152]
}

[sub_resource type="Animation" id="Animation_2hglt"]
resource_name = "jump_start"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NoCannonSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [73]
}

[sub_resource type="Animation" id="Animation_p5mh7"]
resource_name = "spinning"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NoCannonSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.000714103, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [96, 97, 98, 99]
}

[sub_resource type="Animation" id="Animation_aqxoa"]
resource_name = "idle_shooting"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CannonSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [152]
}

[sub_resource type="Animation" id="Animation_mbn53"]
resource_name = "run_shooting"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CannonSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [154, 155, 156, 157, 158, 159, 160, 161, 162, 163]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_khdvw"]
_data = {
"RESET": SubResource("Animation_7nqjc"),
"idle": SubResource("Animation_4rh8x"),
"idle_shooting": SubResource("Animation_aqxoa"),
"jump_start": SubResource("Animation_2hglt"),
"run_shooting": SubResource("Animation_mbn53"),
"running": SubResource("Animation_24bmv"),
"spinning": SubResource("Animation_p5mh7")
}

[sub_resource type="Gradient" id="Gradient_1wffs"]
colors = PackedColorArray(1, 0.486275, 0, 1, 1, 1, 1, 0.184314)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_f1hl4"]
gradient = SubResource("Gradient_1wffs")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_i517t"]
particle_flag_disable_z = true
spread = 9.01
gravity = Vector3(0, 0, 0)
initial_velocity_min = 80.0
initial_velocity_max = 150.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.5
color_ramp = SubResource("GradientTexture1D_f1hl4")

[node name="Player" type="CharacterBody2D" groups=["Shooters"]]
collision_mask = 254
script = ExtResource("1_nxfsn")

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(-1, 5)
shape = SubResource("CapsuleShape2D_dekcq")
metadata/_edit_lock_ = true

[node name="CannonMarker" type="Marker2D" parent="."]
position = Vector2(14, -2)

[node name="NoCannonSprites" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_7f6se")
texture = ExtResource("2_7b0wk")
hframes = 12
vframes = 21
frame = 48
metadata/_edit_lock_ = true

[node name="CannonSprites" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_h48un")
hframes = 19
vframes = 19
frame = 152
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_khdvw")
}

[node name="PointLight2D" type="PointLight2D" parent="."]
energy = 0.3
texture = ExtResource("4_kwrbe")
metadata/_edit_lock_ = true

[node name="ShootingParticles" type="GPUParticles2D" parent="."]
position = Vector2(14, -3)
emitting = false
amount = 10
process_material = SubResource("ParticleProcessMaterial_i517t")
lifetime = 0.2
one_shot = true
trail_lifetime = 0.1
